--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Image Editor</title>
   </head>
   <body>
-    <div id="app">
-      <canvas id="canvas">
-
-      </canvas>
+    <div class="app">
+      <canvas id="canvas"></canvas>
+      <input id="fileInput" type="file" accept="image/*"/>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
