transfer to react

--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <title>Image Editor</title>
   </head>
   <body>
-    <div class="app">
-      <canvas id="canvas"></canvas>
-      <div class="tools">
-        <input id="fileInput" type="file" accept="image/*"/>
-        <button id="scaleDown" type="button">-</button>
-        <p id="scale"></p>
-        <button id="scaleUp" type="button">+</button>
-      </div>
-    </div>
-    <script type="module" src="/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
